--- a/helm/ea-im-incident-form-web/templates/config-map.yaml
+++ b/helm/ea-im-incident-form-web/templates/config-map.yaml
@@ -3,4 +3,12 @@
 data:
   NODE_ENV: {{ quote .Values.environment }}
   PORT: {{ quote .Values.container.port }}
+  {{- if .Values.container.redisHostname }}
+  REDIS_HOSTNAME: {{ quote .Values.container.redisHostname }}
+  {{- end }}
+  REDIS_PORT: {{ quote .Values.container.redisPort }}
+  REDIS_PARTITION: {{ quote .Values.container.redisPartition }}
+  SESSION_TIMEOUT_IN_MINUTES: {{ quote .Values.container.sessionTimeoutInMinutes }}
+  STATIC_CACHE_TIMEOUT_IN_MILLIS: {{ quote .Values.container.staticCacheTimeoutInMillis }}
+  COOKIE_TTL_IN_MILLIS: {{ quote .Values.container.cookieTtlInMillis }}
 {{- end -}}
