--- a/helm/ea-im-incident-form-web/values.yaml
+++ b/helm/ea-im-incident-form-web/values.yaml
@@ -22,6 +22,14 @@ container:
   limitMemory: 40Mi
   limitCpu: 40m
   port: 3000
+  redisHostname: redis-redis-ha.default
+  redisPassword: redis
+  redisPort: 6379
+  redisPartition: ea-incident-form
+  cookiePassword: cookiepassword_cookiepassword_cookiepassword_cookiepassword
+  sessionTimeoutInMinutes: 20
+  staticCacheTimeoutInMillis: 2000000
+  cookieTtlInMillis: 2000000
 
 livenessProbe:
   path: /healthz
