--- a/helm/ea-im-incident-form-web/templates/container-secret.yaml
+++ b/helm/ea-im-incident-form-web/templates/container-secret.yaml
@@ -1,5 +1,5 @@
-{{- include "ffc-helm-library.container-secret" (list . "ea-im-incident-form-web.container-secret") -}}
-{{- define "ea-im-incident-form-web.container-secret" -}}
+{{- include "ffc-helm-library.container-secret" (list . "ea-wq-incident-web.container-secret") -}}
+{{- define "ea-wq-incident-web.container-secret" -}}
 stringData:
   {{- if .Values.appInsights.key }}
   APPINSIGHTS_INSTRUMENTATIONKEY: {{ quote .Values.appInsights.key }}
