--- a/helm/ea-im-incident-form-web/Chart.yaml
+++ b/helm/ea-im-incident-form-web/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 description: Web frontend for incident form
-name: ea-im-incident-form-web
+name: ea-wq-incident-web
 # this version is automatically updated in the build pipline
 version: 1.0.0
 dependencies:
