Update docker compose for pipeline support (#1)
* Update docker compose for pipeline support

* bump version
add redis as depends on

* rename folder

* Add appInsights to helm values

* Comment out helm secret

* Update helm values

* Update docker compose defaults

* Drop volume mount

* remove COOKIE_TTL_IN_MILLIS helm setting

* update value names

* add ingress template

Co-authored-by: David Stone <davidjamesstone@gmail.com>

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -5,6 +5,8 @@ version: '3.8'
 
 services:
   ea-wq-incident-web:
+    depends_on:
+      - redis
     build:
       target: development
     image: ea-wq-incident-web-development
@@ -15,3 +17,12 @@ services:
     volumes:
       - ./app:/home/node/app
       - ./package.json:/home/node/package.json
+  redis:
+    image: redis:4.0.14
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+
+volumes:
+  redis_data:
