--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -10,9 +10,10 @@ services:
     image: ea-wq-incident-web-development
     container_name: ea-wq-incident-web-test
     command: npm run test
+    environment: 
+      NODE_ENV: test
     volumes:
-      - ./app:/home/node/app
-      - ./test:/home/node/test/
+      - ./test:/home/node/test
       - ./test-output:/home/node/test-output
       - ./jest.config.js:/home/node/jest.config.js
       - ./package.json:/home/node/package.json
