--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,3 +16,6 @@ services:
       # SESSION_TIMEOUT_IN_MINUTES: ${SESSION_TIMEOUT_IN_MINUTES}
       # STATIC_CACHE_TIMEOUT_IN_MILLIS: ${STATIC_CACHE_TIMEOUT_IN_MILLIS}
       # COOKIE_TTL_IN_MILLIS: ${COOKIE_TTL_IN_MILLIS}
+      EMAIL_TO_ADDRESS: ${EMAIL_TO_ADDRESS}
+      NOTIFY_API_KEY: ${NOTIFY_API_KEY}
+      NOTIFY_TEMPLATE_ID: ${NOTIFY_TEMPLATE_ID}
