--- a/helm/ea-wq-incident-web/templates/container-secret.yaml
+++ b/helm/ea-wq-incident-web/templates/container-secret.yaml
@@ -6,4 +6,5 @@ stringData:
   {{- end }}
   COOKIE_PASSWORD: {{ .Values.container.cookiePassword | quote }}
   REDIS_PASSWORD: {{ .Values.container.redisPassword | quote }}
+  NOTIFY_API_KEY: {{ .Values.container.notifyApiKey | quote }}
 {{- end -}}
