--- a/helm/ea-wq-incident-web/values.yaml
+++ b/helm/ea-wq-incident-web/values.yaml
@@ -41,6 +41,9 @@ container:
   cookiePassword: passwordpasswordpasswordpasswordpassword
   googleTagManagerKey: GTM-N5QK7RX
   protectiveMonitoringUrl:
+  emailToAddress: test@test.com
+  notifyApiKey:
+  notifyTemplateId:
 
 ingress:
   class: nginx
