--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ea-incident-form-web",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "description-of-project-goes-here",
   "homepage": "https://github.com/DEFRA/ffc-template-node",
   "main": "app/index.js",
@@ -29,6 +29,7 @@
     "@hapi/yar": "^10.1.1",
     "govuk-frontend": "^3.12.0",
     "joi": "^17.4.0",
+    "notifications-node-client": "^5.1.0",
     "nunjucks": "^3.2.3"
   },
   "devDependencies": {
