--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ea-incident-form-web",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "description-of-project-goes-here",
   "homepage": "https://github.com/DEFRA/ffc-template-node",
   "main": "app/index.js",
@@ -20,39 +20,39 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/hapi": "19.x",
-    "@hapi/hoek": "^9.1.1",
-    "@hapi/inert": "^6.0.3",
-    "@hapi/vision": "^6.0.1",
+    "@hapi/hapi": "^20.1.5",
+    "@hapi/hoek": "^9.2.0",
+    "@hapi/inert": "^6.0.4",
+    "@hapi/vision": "^6.1.0",
     "@hapi/yar": "^10.1.1",
-    "govuk-frontend": "^3.12.0",
-    "joi": "^17.4.0",
+    "govuk-frontend": "^3.13.0",
+    "joi": "^17.4.2",
     "notifications-node-client": "^5.1.0",
     "nunjucks": "^3.2.3"
   },
   "devDependencies": {
-    "@hapi/catbox-memory": "^5.0.0",
+    "@hapi/catbox-memory": "^5.0.1",
     "@hapi/good": "^9.0.1",
     "@hapi/good-console": "^9.0.1",
     "@hapi/good-squeeze": "^6.0.0",
-    "@pact-foundation/pact": "^9.15.4",
+    "@pact-foundation/pact": "^9.16.0",
     "blipp": "^4.0.2",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.5",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "jest": "^26.6.3",
-    "jest-junit": "^11.1.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "nodemon": "^2.0.7",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.1.0",
+    "jest-junit": "^12.2.0",
+    "mini-css-extract-plugin": "^2.2.2",
+    "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^4.0.0",
-    "sass": "^1.33.0",
-    "sass-loader": "^11.1.1",
-    "standard": "^14.3.4",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0"
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0",
+    "standard": "^16.0.3",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0"
   },
   "standard": {
     "globals": [
