--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ea-incident-form-web",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "description-of-project-goes-here",
   "homepage": "https://github.com/DEFRA/ffc-template-node",
   "main": "app/index.js",
@@ -26,15 +26,13 @@
     "@hapi/vision": "^6.1.0",
     "@hapi/yar": "^10.1.1",
     "govuk-frontend": "^3.13.0",
+    "hapi-pino": "^8.3.0",
     "joi": "^17.4.2",
     "notifications-node-client": "^5.1.0",
     "nunjucks": "^3.2.3"
   },
   "devDependencies": {
     "@hapi/catbox-memory": "^5.0.1",
-    "@hapi/good": "^9.0.1",
-    "@hapi/good-console": "^9.0.1",
-    "@hapi/good-squeeze": "^6.0.0",
     "@pact-foundation/pact": "^9.16.0",
     "blipp": "^4.0.2",
     "clean-webpack-plugin": "^4.0.0",
