--- a/helm/ea-wq-incident-web/Chart.yaml
+++ b/helm/ea-wq-incident-web/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-description: Web frontend for incident form
+description: A Helm Chart to deploy the ea-wq-incident-web application to Kubernetes
 name: ea-wq-incident-web
 # this version is automatically updated in the build pipline
 version: 1.0.0
 dependencies:
-- name: ffc-helm-library
-  version: 4.0.0
-  repository: https://raw.githubusercontent.com/defra/ffc-helm-repository/master/
+- name: adp-helm-library
+  version: ^1.0.0
+  repository: https://raw.githubusercontent.com/defra/adp-helm-repository/main/adp-helm-library
