--- a/helm/ea-wq-incident-web/templates/ingress.yaml
+++ b/helm/ea-wq-incident-web/templates/ingress.yaml
@@ -1,3 +1,3 @@
-{{- include "ffc-helm-library.azure-ingress" (list . "ea-wq-incident-web.ingress") -}}
+{{- include "adp-helm-library.azure-ingress" (list . "ea-wq-incident-web.ingress") -}}
 {{- define "ea-wq-incident-web.ingress" -}}
 {{- end -}}
